--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,9 +15,12 @@
         android:theme="@style/Theme.Music"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.RegisterActivity"
-            android:screenOrientation="portrait"
+            android:name=".Activities.SongPlayerActivity"
             android:exported="false" />
+        <activity
+            android:name=".Activities.RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activities.MainActivity"
             android:exported="false" />
